<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/aboveLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/topwrap" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/topwrap2" android:background="@drawable/textview_border" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <ImageView android:id="@id/return2" android:layout_width="34.0dip" android:layout_height="35.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="7.0dip" android:src="@drawable/title2" />
            <TextView android:gravity="center_vertical" android:id="@id/checkinbtn" android:layout_width="120.0dip" android:layout_height="50.0dip" android:layout_marginLeft="12.0dip" android:text="@string/pointshop" style="@style/tophead" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
    <ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/topwrap">
        <LinearLayout android:orientation="vertical" android:id="@id/fragmentContent" android:background="@color/white" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <EditText android:textSize="14.0sp" android:id="@id/loginphone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/loginnamenote" />
            <EditText android:textSize="14.0sp" android:id="@id/loginpwd" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="15.0dip" android:hint="@string/loginpwdnote" android:password="true" />
            <Button android:textColor="@color/white" android:layout_gravity="center" android:id="@id/loginbtn" android:background="@drawable/awifibtn" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="登录" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ffec5369" android:id="@id/registerbtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="免费注册" android:layout_alignParentLeft="true" />
                <TextView android:textColor="#ffec5369" android:id="@id/findpwdbtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="找回密码" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>